--- a/src/main/resources/templates/orderFromClient.html
+++ b/src/main/resources/templates/orderFromClient.html
@@ -100,8 +100,28 @@
 <div class="main-block">
     <form action="/">
         <div>
-            <h4>Informacje o kliencie</h4>
+            <h4>Informacje o zamówieniu</h4>
             <table>
+                <tr>
+                    <td class="first-col">Imię i nazwisko </td>
+                    <td><p name="name">Jan Kowalski</td>
+                </tr>
+                <tr>
+                    <td class="first-col">Adres email</td>
+                    <td><p name="needs">jan.kowalski@op.pl</td>
+                </tr>
+                <tr>
+                    <td class="first-col">Uwagi dotyczące diety </td>
+                    <td><p name="needs">"NIe lubie schabpowych"</td>
+                </tr>
+                <tr>
+                    <td class="first-col">Uwagi dotyczące diety </td>
+                    <td><p name="needs">"NIe lubie schabpowych"</td>
+                </tr>
+                <tr>
+                    <td class="first-col">Uwagi dotyczące diety </td>
+                    <td><p name="needs">"NIe lubie schabpowych"</td>
+                </tr>
                 <tr>
                     <td class="first-col">Uwagi dotyczące diety </td>
                     <td><p name="needs">"NIe lubie schabpowych"</td>
