Some fix in templates. Add hibernate validator.

--- a/src/main/resources/templates/contactForm.html
+++ b/src/main/resources/templates/contactForm.html
@@ -232,8 +232,8 @@
         <input id="zip" type="text"   name="zip" required/>
       </div>
       <div class="item">
-        <label for="state">Miasto<span>*</span></label>
-        <input id="state" type="text"   name="city" required/>
+        <label for="city">Miasto<span>*</span></label>
+        <input id="city" type="text"   name="city" required/>
       </div>
       <div class="item">
         <label for="age">Wiek<span>*</span></label>
@@ -286,7 +286,7 @@
     <div class="question">
       <div class="question-answer">
         <div>
-          <input type="radio" value="yes" id="radio_15" name="rules" required/>
+          <input type="radio" id="radio_15" required/>
           <label for="radio_15" class="radio"><span>Zapoznałem się z zasadami.</span></label>
         </div>
       </div>
