Add builder to order class Add new data to base Rename repos with ingredients Add show pic in client -> show dish

--- a/src/main/resources/templates/client/showDiet.html
+++ b/src/main/resources/templates/client/showDiet.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <link href="../img/diet_ico.png" rel="shortcut icon" type="image/x-icon"/>
+    <link href="../img/diet_ico_white.png" rel="shortcut icon" type="image/x-icon"/>
     <title>GoodCoolories - skorzystaj już teraz!</title>
     <link rel="stylesheet" href="../css/client/showDiet.css" media="screen">
     <script class="u-script" type="text/javascript" src="//static.nicepage.com/shared/assets/jquery-1.9.1.min.js"
@@ -296,7 +296,7 @@
 </header>
 
 <section class="u-align-center u-clearfix u-section-2" id="sec-885e">
-    <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+    <div class="u-clearfix u-sheet u-valign-middle u-sheet-1" style="min-height: 500px">
         <h1 class="u-custom-font u-text u-text-default u-text-1" style="margin-top:0;">Twoje Menu</h1>
         <p class="u-text u-text-2">Skomponowane specjalnie dla Ciebie tak, abyś poświęcił jak najmniej czasu do
             przygotowania posiłków i najadł się do syta ze smakiem.</p>
