--- a/src/main/resources/templates/client/thankYou.html
+++ b/src/main/resources/templates/client/thankYou.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-    <link href="../img/diet_ico.png" rel="shortcut icon" type="image/x-icon" />
+    <link href="../img/diet_ico_white.png" rel="shortcut icon" type="image/x-icon" />
     <title>GoodCoolories - skorzystaj już teraz!</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
     <link rel="stylesheet" href="..css/client/thankYou.css">
