--- a/src/main/resources/templates/client/hello.html
+++ b/src/main/resources/templates/client/hello.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <link href="../img/diet_ico.png" rel="shortcut icon" type="image/x-icon"/>
+    <link href="../img/diet_ico_white.png" rel="shortcut icon" type="image/x-icon"/>
     <title>GoodCoolories - skorzystaj już teraz!</title>
     <link rel="stylesheet" href="../css/client/hello.css" media="screen">
     <script class="u-script" type="text/javascript" src="//static.nicepage.com/shared/assets/jquery-1.9.1.min.js"
