--- a/src/main/resources/templates/dietician/login.html
+++ b/src/main/resources/templates/dietician/login.html
@@ -146,7 +146,7 @@
     <p class="error" th:text="${error}" style="text-align: center"></p>
     <hr>
     <div class="btn-block">
-      <button type="submit" href="/admin/orders">Zaloguj</button>
+      <button type="submit" th:href="@{/admin/orders}">Zaloguj</button>
     </div>
   </form>
 </div>
