--- a/src/main/resources/templates/client/showDish.html
+++ b/src/main/resources/templates/client/showDish.html
@@ -319,7 +319,7 @@
                                                 <br>
                                                 <br>
                                             </p>
-                                            <a th:href="'/show-diet?token=111'"
+                                            <a th:href="'/show-diet?token='+${token}"
                                                class="u-border-1 u-border-black u-btn u-btn-rectangle u-button-style u-radius-0 u-btn-1">Powrót</a>
                                         </div>
                                     </div>
