Some logical biznes moved from controller to service Add interface comparable to Dish entity Send sorted list to showDiet Change zip code from number to text Add back button to find page

--- a/src/main/resources/templates/client/find.html
+++ b/src/main/resources/templates/client/find.html
@@ -7,6 +7,24 @@
     <link rel="stylesheet" href="../css/client/find.css"
           integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <style>
+        .back-button {
+            text-decoration: none;
+            float: left;
+            padding-top: 1%;
+            margin: 0 280px;
+            text-align: center;
+            width: 200px;
+            height: 30px;
+            color: black;
+            border: 1px solid black;
+            background-color: transparent;
+        }
+
+
+        .back-button:hover {
+            border-color: transparent;
+        }
+
         body {
             background-image: url("img/wallpaper.jpg");
             background-size: cover;
@@ -209,6 +227,7 @@
         <br/>
         <div class="btn-block">
             <button type="submit">Znajdź</button>
+            <a href="/hello"><button type="button">Powrót</button></a>
         </div>
     </form>
 </div>
