--- a/src/main/resources/templates/client/order.html
+++ b/src/main/resources/templates/client/order.html
@@ -276,7 +276,7 @@
             </div>
             <div class="item">
                 <label for="zip">Kod pocztowy<span>*</span></label>
-                <input id="zip" type="number" name="zip" placeholder="50023" min="00000" max="99999" minlength="5" maxlength="5" required/>
+                <input id="zip" type="text" name="zip" placeholder="50023" minlength="5" maxlength="5" required/>
             </div>
             <div class="item">
                 <label for="city">Miasto<span>*</span></label>
