Renamed endpoints and files Removed test endpoint "/form"

--- a/src/main/resources/templates/dietician/addRecipe.html
+++ b/src/main/resources/templates/dietician/addRecipe.html
@@ -126,7 +126,7 @@
                     </a>
                 </li>
                 <li class="sub-menu">
-                    <a class="active" th:href="@{/admin/recipes}">
+                    <a class="active" th:href="@{/admin/add-recipe}">
                         <i class="fa fa-sticky-note-o"></i>
                         <span>Przepisy</span>
                     </a>
