--- a/src/main/resources/templates/dietician/orders.html
+++ b/src/main/resources/templates/dietician/orders.html
@@ -79,7 +79,7 @@
                     </a>
                 </li>
                 <li class="sub-menu">
-                    <a th:href="@{/admin/recipes}">
+                    <a th:href="@{/admin/add-recipe}">
                         <i class="fa fa-sticky-note-o"></i>
                         <span>Przepisy</span>
                     </a>
