Refactor after removing unimportant files

--- a/src/main/resources/templates/dietician/addRecipe.html
+++ b/src/main/resources/templates/dietician/addRecipe.html
@@ -121,14 +121,12 @@
             <ul class="sidebar-menu" id="nav-accordion">
                 <li class="mt">
                     <a th:href="@{/admin/orders}">
-                        <i class="fa fa-money"></i>
                         <span>Zamówienia</span>
                     </a>
                 </li>
                 <li class="sub-menu">
                     <a class="active" th:href="@{/admin/add-recipe}">
-                        <i class="fa fa-sticky-note-o"></i>
-                        <span>Przepisy</span>
+                        <span>Dodaj przepis</span>
                     </a>
                 </li>
             </ul>
