Rmoved unimportant files Refactor after removing unimportant files Renamed files Add one css file to a few html files

--- a/src/main/resources/templates/client/hello.html
+++ b/src/main/resources/templates/client/hello.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <link href="../img/diet_ico_white.png" rel="shortcut icon" type="image/x-icon"/>
     <title>GoodCoolories - skorzystaj już teraz!</title>
-    <link rel="stylesheet" href="../css/client/hello.css" media="screen">
+    <link rel="stylesheet" href="../css/client/animate.css" media="screen">
     <script class="u-script" type="text/javascript" src="//static.nicepage.com/shared/assets/jquery-1.9.1.min.js"
             defer></script>
     <script class="u-script" type="text/javascript"
