--- a/src/main/resources/templates/client/showDiet.html
+++ b/src/main/resources/templates/client/showDiet.html
@@ -6,7 +6,7 @@
     <meta name="page_type" content="np-template-header-footer-from-plugin">
     <link href="../img/diet_ico_white.png" rel="shortcut icon" type="image/x-icon"/>
     <title>GoodCoolories - skorzystaj już teraz!</title>
-    <link rel="stylesheet" href="../css/client/showDiet.css" media="screen">
+    <link rel="stylesheet" href="../css/client/animate.css" media="screen">
     <script class="u-script" type="text/javascript" src="//static.nicepage.com/shared/assets/jquery-1.9.1.min.js"
             defer></script>
     <script class="u-script" type="text/javascript"
